--- a/settings.json
+++ b/settings.json
@@ -8,39 +8,9 @@
          "name":"eretailers-p1",
          "objects":[
             {
-               "label":"top",
+               "label":"saree",
                "color":"#32a852",
-               "icon":"letter-t-box"
-            },
-            {
-               "label":"shorts",
-               "color":"#32a8a0",
                "icon":"letter-s-box"
-            },
-            {
-               "label":"trousers",
-               "color":"#3251a8",
-               "icon":"letter-t-circle"
-            },
-            {
-               "label":"skirt",
-               "color":"#9e32a8",
-               "icon":"letter-s-circle"
-            },
-            {
-               "label":"dresses",
-               "color":"#a83263",
-               "icon":"letter-d-box"
-            },
-            {
-               "label":"bags",
-               "color":"#a83263",
-               "icon":"letter-l-box"
-            },
-            {
-               "label":"footwear",
-               "color":"#a87532",
-               "icon":"letter-l-circle"
             }
          ]
       }
