--- a/settings.json
+++ b/settings.json
@@ -39,27 +39,27 @@
             },
             {
                "label":"shirts",
-               "color":"#32a8b0",
+               "color":"#a88332",
                "icon":"letter-s-box"
             },
             {
                "label":"tshirts",
-               "color":"#32a8b0",
+               "color":"#a83248",
                "icon":"letter-t-box"
             },
             {
                "label":"tunics",
-               "color":"#32a8b0",
+               "color":"#a83248",
                "icon":"letter-t-box"
             },
             {
                "label":"kurtas",
-               "color":"#32a8b0",
+               "color":"#329ca8",
                "icon":"letter-k-box"
             },
             {
                "label":"skirts",
-               "color":"#32a8b0",
+               "color":"#32a852",
                "icon":"letter-s-box"
             }
          ]
