--- a/settings.json
+++ b/settings.json
@@ -49,7 +49,7 @@
             },
             {
                "label":"tunics",
-               "color":"#a83248",
+               "color":"#a86248",
                "icon":"letter-t-box"
             },
             {
@@ -64,16 +64,65 @@
             },
             {
                "label":"shorts",
-               "color":"#32a852",
+               "color":"#d16d3b",
                "icon":"letter-s-box"
             },
             {
                "label":"dress",
-               "color":"#32a852",
+               "color":"#25dbc3",
                "icon":"letter-d-box"
             },{
                "label":"trousers",
+               "color":"#621c91",
+               "icon":"letter-t-box"
+            },
+            {
+               "label":"formal trouser",
+               "color":"b89aac",
+               "icon":"letter-t-box"
+            },
+            {
+               "label":"casual trouser",
+               "color":"#8372d4",
+               "icon":"letter-t-box"
+            },
+            {
+               "label":"track pant",
                "color":"#32a852",
+               "icon":"letter-t-box"
+            },{
+               "label":"cargo",
+               "color":"#c7967d",
+               "icon":"letter-t-box"
+            },
+            {
+               "label":"pyjamas",
+               "color":"#f069d3",
+               "icon":"letter-t-box"
+            },
+            {
+               "label":"jeans",
+               "color":"#ad62e3",
+               "icon":"letter-t-box"
+            },
+            {
+               "label":"jackets",
+               "color":"#7567db",
+               "icon":"letter-t-box"
+            },
+            {
+               "label":"sweatshirts",
+               "color":"#b1f0ce",
+               "icon":"letter-t-box"
+            },
+            {
+               "label":"suits",
+               "color":"#eef0b1",
+               "icon":"letter-t-box"
+            },
+            {
+               "label":"jumpsuit",
+               "color":"#fcba03",
                "icon":"letter-t-box"
             }
 
