--- a/settings.json
+++ b/settings.json
@@ -51,6 +51,15 @@
                "color":"#34ebe5",
                "icon":"letter-r-box"
             },
+           {
+               "label":"kurtis",
+               "color":"#34ebe5",
+               "icon":"letter-r-box"
+            },{
+               "label":"salwar",
+               "color":"#34ebe5",
+               "icon":"letter-r-box"
+            },
             {
                "label":"saree",
                "color":"#32a852",
