--- a/settings.json
+++ b/settings.json
@@ -453,7 +453,7 @@
               "icon":"letter-s-box"
            },
 {
-              "label":"bank_name",
+              "label":"company_name",
               "color":"#61a152",
               "icon":"letter-s-box"
            },
